--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
 
             document.querySelector('.close').addEventListener('click', () => {
                 document.getElementById('valentin-modal').style.display = 'none';
-                window.open("https://www.youtube.com/watch?v=RNELkqU9m-g", "_blank");
+                window.open("https://www.youtube.com/watch?v=RNELkqU9m-g&t=2s", "_blank");
             });
         });
     </script>
